# Multiplayer-Shooting-game

./: .gitignore  CMakeLists.txt  MULTIPLAYER_SETUP.md  client.cpp  server.cpp
include/: Bullet.h  GameRenderer.h  GameState.h  InputHandler.h  NetworkManager.h  Player.h
src/: Bullet.cpp  GameRenderer.cpp  GameState.cpp  InputHandler.cpp  NetworkManager.cpp  Player.cpp
